tests/unit/default/syntax-error/150-alter.e.t
---- IN ----
*
---- OUT ----
---- ERR ----
syntax: expected <table> after `*` instead of EOL at position 1 - at line 1
---- EXIT ----
1
